test/typeCheckTest/fail/test17.ic
class MoreBadMethodCall {
	void main (string [] args) {
		boolean b = anotherMissingMethod(1, "hi", true);
	}
}